add websocket handling
